# arxiv-mcp

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  README.md  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  pyproject.toml  start.ps1
.github/workflows/: ci.yml
assets/prompts/: examples.json  system.md  user.md
docs/: ARCHITECTURE.md  ARXIV.md  INSTALL.md  MCP_SERVER.md  TECHNICAL.md  WEBAPP.md
src/arxiv_mcp/: __init__.py  __main__.py  anthropic_blog.py  app.py  arxiv_html.py  config.py  depot_service.py  html_extract.py  ids.py  lab_blog.py  output_schemas.py  server.py  tools_manifest.py
src/arxiv_mcp/services/: __init__.py  corpus.py  papers.py
src/arxiv_mcp/skills/arxiv-researcher/: SKILL.md
src/arxiv_mcp/tools/: __init__.py
src/arxiv_mcp/tools/prefab/: __init__.py  paper_card.py
tests/: test_arxiv_html.py  test_corpus_fts.py  test_ids.py
web_sota/: package-lock.json  package.json  start.ps1  vite.config.ts
web_sota/src/: App.tsx  index.css
web_sota/src/api/: client.ts
web_sota/src/components/layout/: AppLayout.tsx
web_sota/src/lib/: searchQueryStorage.ts
web_sota/src/pages/: AnthropicPage.tsx  AppsPage.tsx  ArxivSearch.tsx  Dashboard.tsx  Depot.tsx  DepotSemantic.tsx  Favorites.tsx  HelpPage.tsx  SettingsPage.tsx  ToolsPage.tsx
